Context-free indexing infrastructure
Signed-off-by: Thomas Mäder <t.s.maeder@gmail.com>